Update whitepaper link

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
             <p class="insight-sub">
               There's a faster way to find what's viral. I put together a whitepaper on how to spot trends before they peak.
             </p>
-            <a class="insight-cta" href="https://tovapersson.github.io/leadmagnet/" target="_blank" onclick="trackWhitepaperClick()">
+            <a class="insight-cta" href="https://tovapersson.github.io/whitepaper/" target="_blank" onclick="trackWhitepaperClick()">
               Download the whitepaper
             </a>
           </div>
